TestCases/Errors/Haversine/layers/ssh_win.spm
@layer ssh_win
type numeric_meta
default_layer ssh_08_win
years	2002	2003	2004	2005	2006	2007	2008	2009	2010	2011	2012
layers	ssh_02_win	ssh_03_win	ssh_04_win	ssh_05_win	ssh_06_win	ssh_07_win	ssh_08_win	ssh_09_win	ssh_10_win	ssh_11_win	ssh_12_win
